# test-cosmos

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  schema.py  utils.py
