[tool.poetry]
name = "testing cosmos connection"
version = "0.1.0"
description = "XYZ"
authors = ["Sagar Dubey <sdubey@askquanta.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
azure-cosmos = "^4.7.0"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
